--- a/speedtest.html
+++ b/speedtest.html
@@ -1,118 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internet Speed Test</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f9;
       margin: 0;
-      padding: 0;
+      background: #111;
+      color: white;
+      font-family: sans-serif;
       text-align: center;
-      color: #333;
     }
-    .container {
-      max-width: 500px;
-      margin: 50px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #0078d7;
-    }
-    button {
-      padding: 12px 25px;
-      font-size: 16px;
-      background: #0078d7;
+    iframe {
       border: none;
-      border-radius: 6px;
-      color: #fff;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #005bb5;
-    }
-    .results {
-      margin-top: 25px;
-      text-align: left;
-    }
-    .results p {
-      font-size: 18px;
-      margin: 8px 0;
-    }
-    .note {
-      font-size: 13px;
-      margin-top: 15px;
-      color: #777;
+      width: 100%;
+      height: 100vh;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Internet Speed Test</h1>
-    <button onclick="startTest()">Start Test</button>
-    <div class="results">
-      <p><strong>Download:</strong> <span id="download">-</span> Mbps</p>
-      <p><strong>Upload:</strong> <span id="upload">Upload test not available in demo mode</span></p>
-      <p><strong>Ping:</strong> <span id="ping">-</span> ms</p>
-    </div>
-    <p class="note">⚠️ Results are estimates. For real upload & more accuracy, host your own server.</p>
-  </div>
-
-  <script>
-    // safe high-resolution timer
-    const now = () =>
-      (window.performance && typeof performance.now === "function")
-        ? performance.now()
-        : Date.now();
-
-    // Test servers (public demo endpoints)
-    const servers = {
-      download: "https://speed.cloudflare.com/__down?bytes=20000000", // ~20 MB file
-      ping: "https://speed.cloudflare.com/__down?bytes=100000"       // ~100 KB file
-    };
-
-    async function measureDownload() {
-      const start = now();
-      const response = await fetch(servers.download + "&_=" + Math.random(), { cache: "no-store" });
-      const blob = await response.blob();
-      const end = now();
-
-      const duration = (end - start) / 1000; // seconds
-      const sizeMB = blob.size / (1024 * 1024); // MB
-      return (sizeMB / duration * 8).toFixed(2); // Mbps
-    }
-
-    async function measurePing() {
-      const start = now();
-      await fetch(servers.ping + "&_=" + Math.random(), { cache: "no-store" });
-      const end = now();
-      return (end - start).toFixed(2);
-    }
-
-    async function startTest() {
-      document.getElementById("download").textContent = "Testing...";
-      document.getElementById("ping").textContent = "Testing...";
-
-      try {
-        const download = await measureDownload();
-        document.getElementById("download").textContent = download;
-      } catch (err) {
-        document.getElementById("download").textContent = "Error";
-      }
-
-      try {
-        const ping = await measurePing();
-        document.getElementById("ping").textContent = ping;
-      } catch (err) {
-        document.getElementById("ping").textContent = "Error";
-      }
-    }
-  </script>
+  <h1>My Speed Test</h1>
+  <!-- Using Fast.com -->
+  <iframe src="https://fast.com"></iframe>
 </body>
 </html>
